--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Base Motor Race 🏍️</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏍️</text></svg>">
     <style>
         * {
             margin: 0;
@@ -865,8 +866,6 @@
 
         // Mint button event
         mintNftBtn.addEventListener('click', mintScoreNFT);
-
-        }
 
         // Mint işlemini simüle et (gerçek blockchain işlemi için)
         function simulateMinting() {
